<resources>
    <!-- General stuff -->
    <string name="app_name">Taide</string>
    <string name="loading">Loading...</string>
    <string name="default_info">Slide in from the left to manage files</string>
    <string name="action_settings">Settings</string>
    <string name="action_copy">Copy</string>
    <string name="action_cut">Cut</string>
    <string name="action_paste">Paste</string>
    <string name="action_undo">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="action_save">Save</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="clipboard_label">Taide code</string>

    <!-- Action button labels -->
    <string name="action_button_copy">Copy</string>
    <string name="action_button_yank">Yank</string>
    <string name="action_button_paste">Paste</string>
    <string name="action_button_toggle_touchpad">TP</string>
    <string name="action_button_insert_bracket">(</string>
    <string name="action_button_insert_hard_bracket">[</string>
    <string name="action_button_insert_curly_bracket">{</string>


    <!-- Filesystem nav strings -->
    <string-array name="filesystem_default_menuitems">
        <item>New project</item>
        <item>Open project</item>
        <item>Import from Dropbox</item>
        <item>New file</item>
        <item>New folder</item>
    </string-array>
    <string name="upOneLevel">..</string>
    <string name="add_new_project_description">Project name:</string>
    <string name="load_project_description">Open project:</string>
    <string name="load_project_loading">Opening project...</string>
    <string name="add_new_file_description">File name:</string>
    <string name="add_new_folder_description">Folder name:</string>
    <string name="rename_file">Rename</string>
    <string name="rename_file_description">New file name:</string>
    <string name="remove_file_description">Are you sure?</string>

    <!-- Dropbox stuff -->
    <string name="dropbox_app_key">o4m52bd67whe1js</string>
    <string name="dropbox_error_auth">"Couldn't authenticate with Dropbox, please try again"</string>

    <!-- History handling (undo/redo) -->
    <string name="history_add_text">Added</string>
    <string name="history_remove_text">Removed</string>

    <!-- Action menu strings -->
    <string name="actionmenu_left_title">Edit</string>
    <string name="actionmenu_right_title">{ }</string>



    <!-- UNITS -->
    <string name="unit_per">per</string>
    <string name="unit_per_abbr">/</string>
    <string name="unit_cm">centimeter</string>
    <string name="unit_cm_plural">centimeters</string>
    <string name="unit_cm_abbr">cm</string>
    <string name="unit_inch">inch</string>
    <string name="unit_inch_plural">inches</string>
    <string name="unit_inch_abbr">in</string>
    <string name="unit_char">character</string>
    <string name="unit_char_plural">characters</string>
    <string name="unit_char_abbr">char.</string>
    <string name="unit_line">line</string>
    <string name="unit_line_plural">lines</string>
    <string name="unit_line_abbr">ln.</string>





    <!-- SETTINGS -->
    <string name="pref_header_general">General</string>

    <string name="pref_header_shortcuts">Shortcuts</string>


    <string name="pref_group_sync_title">Sync</string>
    <!-- Sync -->
    <string name="pref_title_sync">Sync resources</string>
    <!-- What to sync -->
    <string name="pref_title_sync_formats">Customize</string>
    <string name="pref_summary_sync_formats_all">Sync all resources</string>
    <string name="pref_summary_sync_formats_some">Sync some resources</string>
    <string name="pref_summary_sync_formats_none">No resource types selected</string>
    <string name="pref_summary_sync_formats_disabled">Sync disabled</string>
    <string-array name="file_formats_entries">
        <item>Images (.jpg, .png, etc)</item>
        <item>Archives (.zip etc)</item>
        <item>Java archives (.jar)</item>
        <item>Compiled Java files (.class)</item>
    </string-array>
    <!-- Selection -->
    <string name="pref_group_touchpad_title">Touchpad</string>
    <string name="pref_title_touchpad_sensitivity">Horizontal sensitivity</string>
    <string name="pref_title_touchpad_sensitivity_vertical">Vertical sensitivity</string>
    <!-- Other stuff (settings) -->
    <string name="pref_group_others_title">Other</string>
    <string name="pref_title_history_handler_type">Undo/redo management</string>
    <string name="pref_summary_history_handler_type">How to register changes</string>
    <string-array name="history_handlers_entries">
        <item>Time based</item>
        <item>Word based</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>



    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
