<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="50"
        android:title="@string/action_copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cut"
        android:orderInCategory="50"
        android:title="@string/action_cut"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_paste"
        android:orderInCategory="50"
        android:title="@string/action_paste"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="50"
        android:title="@string/action_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_undo"
        android:orderInCategory="50"
        android:title="@string/action_undo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_redo"
        android:orderInCategory="50"
        android:title="@string/action_redo"
        app:showAsAction="ifRoom" />
</menu>
