<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.chalmers.taide.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="50"
        android:title="@string/action_copy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_cut"
        android:orderInCategory="50"
        android:title="@string/action_cut"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_paste"
        android:orderInCategory="50"
        android:title="@string/action_paste"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_undo"
        android:orderInCategory="50"
        android:title="@string/action_undo"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_redo"
        android:orderInCategory="50"
        android:title="@string/action_redo"
        app:showAsAction="ifRoom" />
</menu>
